update info in my CV

--- a/HTML/Kapturov Alexander CV.html
+++ b/HTML/Kapturov Alexander CV.html
@@ -5,5 +5,30 @@
     </head>
     <body>
         <h1>Kapturov Alexander</h1>
+        <p><strong>Software Engineer</strong></p>
+        <hr>
+        <h2>Summary</h2>
+        <p class="summary">
+            Python (4 kyu at Code Wars, top 11%) <br>
+            English B1 <br>
+            SQL (basics) <br>
+            Java SE (elementary) <br>
+            Agile, Scrum, Kanban <br>
+            HTML (basics) <br>
+            CSS (basics) <br>
+            JavaScript ES6+ (basics) <br>
+            <br>
+            Every day learn something new. <br>
+            <br>
+            I have read some books from IT sphere: <br>
+            <ol>
+                <li>John Sonmez - "Soft skills: The software developer's life manual" ("Путь программиста. Человек эпохи айти")</li>
+                <li>Chad Fowler - "Passionate programmer" ("Программист-фанатик")</li>
+                <li>Robert C. Martin - "The Clean Coder: A code of conduct for professional Programmers" ("Идеальный программист. Как стать профессионалом разработки ПО")</li>
+                <li>Robert C. Martin - "Clean Agile. Back to Basics" ("Чистый Agile. Основы гибкости")</li>
+                <li>Wladston Ferreira Filho - "Computer Science Distilled" ("Теоретический минимум по Computer Science")</li>
+            </ol>
+        </p>
+        <hr>
     </body>
 </html>
