Update Kapturov Alexander CV.html

--- a/HTML/Kapturov Alexander CV.html
+++ b/HTML/Kapturov Alexander CV.html
@@ -6,18 +6,14 @@
     <body>
         <h1>Kapturov Alexander</h1>
         <p><strong>Software Engineer</strong></p>
+
+        <img src="https://avatars.githubusercontent.com/u/86742866?v=4" 
+            alt="Kapturov Alexander's photo" width="250px" height="250px">
+        
         <hr>
-        <h2>Summary</h2>
+        <h2><em>Summary</em></h2>
+
         <p class="summary">
-            Python (4 kyu at Code Wars, top 11%) <br>
-            English B1 <br>
-            SQL (basics) <br>
-            Java SE (elementary) <br>
-            Agile, Scrum, Kanban <br>
-            HTML (basics) <br>
-            CSS (basics) <br>
-            JavaScript ES6+ (basics) <br>
-            <br>
             Every day learn something new. <br>
             <br>
             I have read some books from IT sphere: <br>
@@ -29,6 +25,27 @@
                 <li>Wladston Ferreira Filho - "Computer Science Distilled" ("Теоретический минимум по Computer Science")</li>
             </ol>
         </p>
-        <hr>
+
+        <h2><em>Skills</em></h2>
+        
+        <ul>
+            <li>Python (4 kyu at Code Wars, top 11%)</li>
+            <li>English B1</li>
+            <li>SQL (basics)</li>
+            <li>Java SE (elementary)</li>
+            <li>Agile, Scrum, Kanban</li>
+            <li>HTML (basics)</li>
+            <li>CSS (basics)</li>
+            <li>JavaScript ES6+ (basics)</li>
+        </ul>
+
+        <h2><em>Experience</em></h2>
+
+        <ul>
+            <li>
+                <p><strong>Trainee DWH - Data Mola</strong> | july 2022</p>
+                <p>Participated in Internship Data Camp 2022. Learned how to handle Oracle DBMS</p>
+            </li>
+        </ul>
     </body>
 </html>
