Update Kapturov Alexander CV.html
make some clear code fixes

--- a/HTML/Kapturov Alexander CV.html
+++ b/HTML/Kapturov Alexander CV.html
@@ -34,7 +34,7 @@
             <li>SQL (basics)</li>
             <li>Java SE (elementary)</li>
             <li>Agile, Scrum, Kanban</li>
-            <li>HTML (basics)</li>
+            <li>HTML</li>
             <li>CSS (basics)</li>
             <li>JavaScript ES6+ (basics)</li>
         </ul>
