convert list in experience section into table

--- a/HTML/Kapturov Alexander CV.html
+++ b/HTML/Kapturov Alexander CV.html
@@ -34,18 +34,22 @@
             <li>SQL (basics)</li>
             <li>Java SE (elementary)</li>
             <li>Agile, Scrum, Kanban</li>
-            <li>HTML</li>
+            <li>HTML (basics)</li>
             <li>CSS (basics)</li>
             <li>JavaScript ES6+ (basics)</li>
         </ul>
 
         <h2><em>Experience</em></h2>
 
-        <ul>
-            <li>
-                <p><strong>Trainee DWH - Data Mola</strong> | july 2022</p>
-                <p>Participated in Internship Data Camp 2022. Learned how to handle Oracle DBMS</p>
-            </li>
-        </ul>
+        <table border="1">
+            <tr class="position">
+                <th align="center">Position</th>
+                <td align="center"><em>Trainee DWH - Data Mola</em> | july 2022</td>
+            </tr>
+            <tr class="job description">
+                <th align="center">description</th>
+                <td align="center">Participated in Internship Data Camp 2022. Learned how to handle Oracle DBMS</td>
+            </tr>
+        </table>
     </body>
 </html>
