final version of CV using just HTML

--- a/HTML/Kapturov Alexander CV.html
+++ b/HTML/Kapturov Alexander CV.html
@@ -63,6 +63,14 @@
             <a href="https://stepik.org/users/379983772" target="_blank">Stepik</a> | 
             <a href="https://www.sololearn.com/profile/22087660" target="_blank">Solo Learn</a>
         </p>
-        <br>
+        
+        <h2 align="center">Write me a message</h2>
+
+        <form align="center">
+            <input type="text" placeholder="Name"><br>
+            <input type="text" placeholder="Email"><br>
+            <textarea class="text" placeholder="Message" required></textarea><br>
+            <input type="submit" value="SEND">
+        </form><br>
     </body>
 </html>
