change background color

--- a/HTML/Kapturov Alexander CV.html
+++ b/HTML/Kapturov Alexander CV.html
@@ -3,7 +3,7 @@
     <head>
         <title>Kapturov Alexander CV</title>
     </head>
-    <body bgcolor="#66c2ff">
+    <body bgcolor="#8080ff">
         <h1 align="center">Kapturov Alexander</h1>
         <p align="center"><strong>Software Engineer</strong></p>
         
