add aside block

--- a/HTML/Kapturov Alexander CV.html
+++ b/HTML/Kapturov Alexander CV.html
@@ -5,7 +5,13 @@
         <meta charset="UTF-8">
     </head>
     <body bgcolor="#dfbf9f">
-        <div style="width: 50%; margin: auto;">
+        <div style="width: 25%;" class="left">
+            <aside>
+                
+            </aside>
+        </div>
+
+        <div style="width: 50%; margin: auto;" class="central">
             <header>
                 <h1 align="center">Kapturov Alexander</h1>
                 <p align="center"><strong>Software Engineer</strong></p>
@@ -15,6 +21,7 @@
                 </div>
                 <hr style="border-color: #000;">    
             </header>
+
             <article>
                 <section class="summary">
                     <h2 align="center"><em>Summary</em></h2>
