add audio and video

--- a/HTML/Kapturov Alexander CV.html
+++ b/HTML/Kapturov Alexander CV.html
@@ -7,7 +7,15 @@
     <body bgcolor="#dfbf9f">
         <div style="width: 25%;" class="left">
             <aside>
+                <p>NEFFEX - Big Swing 🎲 [Copyright Free] No.176</p>
+                <audio autoplay controls loop>
+                    <source src="audios/NEFFEX - Big Swing 🎲 [Copyright Free] No.176.m4a" type="audio/mpeg">
+                </audio>
                 
+                <p>Основы Pandas Python | Series, DataFrame И Анализ Данных</p>
+                <video controls loop width="320px" height="180px" poster="https://i.ytimg.com/vi/cEeY0opsVMw/hq720.jpg?sqp=-oaymwEXCNAFEJQDSFryq4qpAwkIARUAAIhCGAE=&rs=AOn4CLAfvDA06Rx6wcsVJZuLpOcPI2c74g">
+                    <source src="videos/Основы Pandas Python _ Series, DataFrame И Анализ Данных.mp4" type="video/mp4">
+                </video>
             </aside>
         </div>
 
